# mem-forge

./: .dockerignore  .env.example  .env.mirrors.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
admin-ui/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
admin-ui/src/: App.tsx  brand.ts  extension.ts  index.css
admin-ui/tests/: api-target.test.ts  brand.test.ts  button-interaction.test.ts  confluence-config.test.ts  extension.test.ts  github-repo-folder-picker.test.ts  lifecycle.test.ts  local-agent-daemon-status.test.ts  local-agent-sync-progress.test.ts  local-markdown-config.test.ts  local-source-readiness.test.ts  managed-sources.test.ts  memories-project-filter.test.ts  memory-type-icons.test.ts  pagination.test.ts  private-memory-detail.test.ts  project-binding.test.ts  projects-page.test.ts  schedules.test.ts  sidebar-layout.test.ts  source-actions.test.ts  source-icons.test.ts  source-list-organization.test.ts  source-readiness.test.ts  source-setup-adapters.test.ts  source-subscriptions.test.ts  sync-status.test.ts  teams-source-setup.test.ts  teams-source-wizard.test.ts
cli/: README.md  index.mjs  package.json
cli/tests/: dependency-check.test.mjs  menu-shape.test.mjs
docs/: README.md  api.md  architecture.md  local-repo-sync.md  quickstart.md
docs/adr/: 0001-project-source-sync-activity-from-existing-execution-records.md  0002-renew-teams-access-through-a-dedicated-browser-session.md  0003-keep-source-list-organization-personal.md  0004-use-proven-authoritative-snapshots-for-rebaseline.md  0005-preserve-provider-identity-across-scope-transitions.md  0006-bound-memory-identity-recall-before-semantic-proof.md  0007-bind-extracted-evidence-to-the-current-projection.md  0008-prune-only-proven-disjoint-incumbents.md  (+7 more)
docs/design/: agent-hook-integration.md  (+15 more)
scripts/: repair_agent_session_source_attribution.py  smoke_litellm_source_support.py  sync_plugin_mcp_proxy.py
tests/: conftest.py  test_access_predicate_admin_path.py  test_access_predicate_by_id_readers.py  test_access_predicate_channels.py  test_access_predicate_dedup.py  test_access_predicate_doc_fallback.py  test_access_predicate_lifecycle.py  test_access_predicate_null.py  test_access_predicate_post_fusion.py  test_access_predicate_principal_authority.py  test_access_predicate_sync_uploader.py  test_access_predicate_two_uploaders.py  test_access_predicate_unit.py  test_adapters_context.py  test_adapters_factory.py  test_adapters_sqlite_keyword.py  test_adapters_sqlite_relational.py  test_adapters_sqlite_vector.py  test_admin_entities_adapter_contract.py  test_admin_memory_storage_neutral.py  test_admin_source_storage_neutral.py  test_agent_hook_context.py  test_agent_knowledge_bundle.py  test_agent_knowledge_markdown.py  test_agent_session_api.py  test_agent_session_curator.py  test_agent_session_gene.py  test_agent_session_repo_identifier.py  test_agent_session_source_attribution_repair.py  test_agent_session_source_isolation.py  test_api_target.py  test_browser_session.py  test_candidate_ledger.py  test_cli_agent_tools.py  test_cli_interactive.py  test_cli_kb_schedule.py  test_confluence_gene.py  test_confluence_pdf.py  test_consolidated_memory_removal.py  test_contradiction_detector.py  (+114 more)
(+334 files in other folders)
