[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memforge"
version = "0.1.0"
description = "Evidence-based agent memory layer for Codex, Claude Code, and development teams"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "MemForge Contributors" },
]
keywords = ["agent-memory", "mcp", "mcp-server", "codex", "claude-code", "coding-agents", "llm", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "aiosqlite>=0.20",
    "chromadb>=0.5",
    "anthropic>=0.40",
    "litellm>=1.74",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "pydantic>=2.9",
    "tiktoken>=0.7",
    "markdownify>=0.13",
    "beautifulsoup4>=4.12",
    "bcrypt>=4.2",
    "cryptography>=42",
    "pip-system-certs>=5.3",
    "PyJWT>=2.9",
    "click>=8.1",
    "rich>=13.9",
    "browser_cookie3>=0.20",
    "tomli>=2.0; python_version < '3.11'",
    "weasyprint>=68.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
[project.scripts]
memforge = "memforge.main:cli"

[project.urls]
Homepage = "https://github.com/shno-labs/mem-forge"
Repository = "https://github.com/shno-labs/mem-forge"
Issues = "https://github.com/shno-labs/mem-forge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/memforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
